--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Receipies</h1>
-    <a href="./recipies/lasagna.html" target="_blank" rel="noopener no referrer">Lasagna</a>
+    <ol>
+       <li><a href="./recipies/lasagna.html" target="_blank" rel="noopener no referrer">Lasagna</a></li>
+       <li><a href="./recipies/mac.html" target="_blank" rel="noopener no referrer">Mac and Cheese</a></li>
+        <li><a href="./recipies/burger.html" target="_blank" rel="noopener no referrer">Burger</a></li>
+    </ol>
 </body>
 </html>
