Addded styles to burger and index page

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Receipies</title>
 </head>
 <body>
-    <h1>Odin Receipies</h1>
-    <ol>
-       <li><a href="./recipies/lasagna.html" target="_blank" rel="noopener no referrer">Lasagna</a></li>
-       <li><a href="./recipies/mac.html" target="_blank" rel="noopener no referrer">Mac and Cheese</a></li>
-        <li><a href="./recipies/burger.html" target="_blank" rel="noopener no referrer">Burger</a></li>
+    <h1 class="headings">Odin Receipies</h1>
+    <ol class="lists">
+       <li><a href="lasagna.html" target="_blank" rel="noopener no referrer">Lasagna</a></li>
+       <li><a href="mac.html" target="_blank" rel="noopener no referrer">Mac and Cheese</a></li>
+        <li><a href="burger.html" target="_blank" rel="noopener no referrer">Burger</a></li>
     </ol>
 </body>
 </html>
